[package]
name = 'uo_rst_parser'
version = '0.4.0'
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2018'
description = 'fork of rst_parser with fixes for upstream-ontologist'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

documentation = 'https://docs.rs/rst_parser'
homepage = 'https://github.com/jelmer/rust-rst'
repository = 'https://github.com/jelmer/rust-rst'

[dependencies]
document_tree = { version = '0.4.0' }

anyhow = '1.0.86'
pest = '2.1.2'
pest_derive = '2.1.0'
